--- a/app.json
+++ b/app.json
@@ -12,12 +12,14 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "package": "com.jsm.aoracourse"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jsm.aoracourse"
     },
     "web": {
       "bundler": "metro",
